--- a/index.html
+++ b/index.html
@@ -16,4 +16,10 @@
   <h1>Flappy bird</h1>
   <h3>Bezoui Software</h3>
 </body>
+<style>
+  body {
+    width: 100vw;
+    overflow-x: hidden;
+  }
+</style>
 </html>
